FIX: fixed alignment issues

--- a/sba_jmaHTML/styles/styles.css
+++ b/sba_jmaHTML/styles/styles.css
@@ -15,13 +15,13 @@ nav{
   margin: 0;
   padding: 0 8px;
   display: flex;
-  background-color: rgba(21, 19, 60, .5);
-  align-items: center;
-  justify-content:end;
+  background-color: rgba(21, 19, 60, .3);
+  align-items: start;
 }
 ul li{
   display: inline;
   list-style: none;
+  padding-right: 8px;
 }
 /*NAVBAR END*/
 
